--- a/about.html
+++ b/about.html
@@ -24,7 +24,7 @@
       <div class="header clearfix">
         <nav>
           <ul class="nav nav-pills pull-right">
-            <li role="presentation" class="active"><a href="#">Home</a></li>
+            <li role="presentation" class="active"><a href="index.html">Home</a></li>
             <li role="presentation"><a href="about.html" style="color:#9999FF">About</a></li>
             <li role="presentation"><a href="#" style="color:#9999FF">Contact</a></li>
           </ul>
@@ -32,36 +32,33 @@
       </div>
 
       <div class="jumbotron2" style="background:#F0FFFF">
-        <h1><div align = center>Purpose of Website</div></h1>
-        <p class="lead"><br>Temporary explanation: Upload files to check for legitimacy and viruses. <br>
-							Click the link below to upload any suspicious files and check for malicious threats.</p>
-        <div align="middle"><a class="btn btn-lg btn-success" style="float:middle" href="#" role="button" > <!--seriously fix these buttons sometime please?-->
-				<input type="file" id="upfile" name="uploadFile"></a></div><br>
-
-				<div align="middle" onclick="getFile()"><input type="submit" style="float:middle" value="File Identity and Scan">
-
-				<input type="submit" style="float:middle" value="Music De-mystifier">
-
-				<input type="submit" style="float:middle" value="Both"><br></div>
-		<!--<form action="getfile.php" method="post"><br>
-		</form>-->
-		<!--BASICALLY LEAVE THIS BIT TO GREG-->
-      </div>
-	  <div class="jumbotron2" style="background:#F0FFFF">
-        <h1><div align = center>Results</div></h1>
-        <p class="lead" align="center">[ Status of uploaded file ]<br>
-							</p>
-        
-		<!--<form action="getfile.php" method="post"><br>
-		</form>-->
-      </div>
-
-      <div class="row marketing" style="color:#CCCCCC">
-        <div class="col-lg-monkey">
+        <h1 class="text-muted" align="center">About</h1><br><br>
+		<div class="row marketing" style="color:#339966">
+        <div class="col-lg-6">
           <h4>Created during HopHacks Fall 2015</h4>
-          <p>Beshoi Genidy, Greg Tseng, Victoria Zheng, Spencer Buelna</p>
+          <p>Beshoi Genidy, Greg Tseng, Victoria Zheng, ???</p>
+
+          <h4>Other Information</h4>
+          <p>Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Cras mattis consectetur purus sit amet fermentum.</p>
+
+          <h4>Subheading</h4>
+          <p>Maecenas sed diam eget risus varius blandit sit amet non magna.</p>
+        </div>
+
+        <div class="col-lg-6">
+          <h4>Subheading</h4>
+          <p>Donec id elit non mi porta gravida at eget metus. Maecenas faucibus mollis interdum.</p>
+
+          <h4>Subheading</h4>
+          <p>Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Cras mattis consectetur purus sit amet fermentum.</p>
+
+          <h4>Subheading</h4>
+          <p>Maecenas sed diam eget risus varius blandit sit amet non magna.</p>
         </div>
       </div>
+      </div>
+
+
 
       <footer class="footer" style="color:#9999CC">
 		<div class="col-lg-6">
@@ -75,7 +72,7 @@
 			get("samelocation.smtg", callBack);
 			
 		}
-		function callBack() { 
+		function callBack() {
 			<!--create new window? dynamic something -->
 		}
 	</script>
