--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           <ul class="nav nav-pills pull-right">
             <li role="presentation" class="active"><a href="#">Home</a></li>
             <li role="presentation"><a href="about.html" style="color:#9999FF">About</a></li>
-            <li role="presentation"><a href="#" style="color:#9999FF">Contact</a></li>
+            <li role="presentation"><a href="contact.html" style="color:#9999FF">Contact</a></li>
           </ul>
         </nav>
       </div>
