--- a/contact.html
+++ b/contact.html
@@ -15,8 +15,12 @@ $(function () {
     $('#fileupload').fileupload({
         dataType: 'json',
         add: function (e, data) {
-            data.context = $('<p/>').text('Uploading...').appendTo(document.body);
-            data.submit();
+            data.context = $('<button/>').text('Upload')
+                .appendTo(document.body)
+                .click(function () {
+                    data.context = $('<p/>').text('Uploading...').replaceAll($(this));
+                    data.submit();
+                });
         },
         done: function (e, data) {
             data.context.text('Upload finished.');
