--- a/index.html
+++ b/index.html
@@ -6,8 +6,30 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Bootstrap 101 Template</title>
-
+    <title>Legen-Dairy</title>
+	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+	<script src="js/vendor/jquery.ui.widget.js"></script>
+	<script src="js/jquery.iframe-transport.js"></script>
+	<script src="js/jquery.fileupload.js"></script>
+	<script>
+$(function () {
+    $('#fileupload').fileupload({
+        dataType: 'json',
+        add: function (e, data) {
+			alert "hi";
+            data.context = $('<button/>').text('Upload')
+                .appendTo(document.body)
+                .click(function () {
+                    data.context = $('<p/>').text('Uploading...').replaceAll($(this));
+                    data.submit();
+                });
+        },
+        done: function (e, data) {
+            data.context.text('Upload finished.');
+        }
+    });
+});
+</script>
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="css/lol.css">
@@ -36,13 +58,7 @@
         <p class="lead"><br>Temporary explanation: Upload files to check for legitimacy and viruses. <br>
 							Click the link below to upload any suspicious files and check for malicious threats.</p>
         <div align="middle"><a class="btn btn-lg btn-success" style="float:middle" href="#" role="button" > <!--seriously fix these buttons sometime please?-->
-				<input type="file" id="upfile" name="uploadFile"></a></div><br>
-
-				<div align="middle" onclick="getFile()"><input type="submit" style="float:middle" value="File Identity and Scan">
-
-				<input type="submit" style="float:middle" value="Music De-mystifier">
-
-				<input type="submit" style="float:middle" value="Both"><br></div>
+				<input id="fileupload" type="file" name="files[]" data-url="server/php/" multiple></a></div><br>
 		<!--<form action="getfile.php" method="post"><br>
 		</form>-->
 		<!--BASICALLY LEAVE THIS BIT TO GREG-->
